# rgba-gif89a-camera

./: .gitattributes  .gitignore  ARCHITECTURE_ANALYSIS.md  CAMERA_INTEGRATION_SUCCESS.md  CUBE_VISUALIZATION_CONCEPT.md  CUBE_VISUALIZATION_PLAN.md  DESIGN_LANGUAGE.md  DEVICE_TESTING_README.md  DEVICE_TEST_PROTOCOL.md  FINAL_GIF_STACK_ANALYSIS.md  FORENSIC_ANALYSIS_REPORT.md  FRAME_BROWSER_IMPLEMENTATION.md  GO_NETWORK_INTEGRATION.md  IMPROVEMENTS_COMPLETED.md  INTEGRATION_COMPLETE.md  M2_IMPLEMENTATION_COMPLETE.md  M2_M3_SEPARATION_PROMPT.md  MILESTONE1_IMPLEMENTATION_SUMMARY.md  MILESTONE1_TEST_IMPLEMENTATION.md  PHASE2_STATUS_REPORT.md  PIPELINE_AUDIT_COMPLETE.md  PIPELINE_VERIFICATION.md  PRODUCTION_HARDENING_PROMPT.md  PR_FIXES_MILESTONE1.md  PR_PLAN.md  README.md  README_M2.md  README_PERFORMANCE.md  ROADMAP.md  RUNBOOK.md  RUNBOOK_LOGS.md  RUST_CBOR_IMPLEMENTATION.md  RUST_INTEGRATION_FIXED.md  SPEC_UI.md  TECHNICAL_SPEC.md  TEST_RESULTS.md  TEST_RESULTS_PHONE.md  TEST_RESULTS_PHONE_UPDATED.md  UI_TASKS.yaml  build.gradle.kts  (+19 more)
.github/workflows/: build.yml  ci.yml  cube-vision-ci.yml  device-tests.yml
agents/: camerax_agent.yaml  cube_testing_agent.yaml  mcp_cube_server.py  nn_downsampler_agent.yaml  qa_bench_agent.yaml  quantizer_agent.yaml  uniffi_agent.yaml
app/: build.gradle.kts  lint-baseline.xml
app/src/androidTest/java/com/rgbagif/: CameraPipelineSmokeTest.kt  MilestoneWorkflowTest.kt
app/src/androidTest/java/com/rgbagif/accessibility/: AccessibilityTest.kt
app/src/androidTest/java/com/rgbagif/camera/: CameraXValidationTest.kt
app/src/androidTest/java/com/rgbagif/device/: DeviceCompatibilityTest.kt
app/src/androidTest/java/com/rgbagif/e2e/: EndToEndUserFlowTest.kt
app/src/androidTest/java/com/rgbagif/integration/: RustKotlinIntegrationTest.kt
app/src/androidTest/java/com/rgbagif/performance/: JniFastPathBenchmarkTest.kt  PerformanceBenchmarkTest.kt
app/src/androidTest/java/com/rgbagif/ui/: ComposeUITest.kt  MilestoneWorkflowUiTest.kt
app/src/androidTest/java/com/rgbagif/validation/: DimensionValidationTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/rgbagif/: MainActivity.kt  MainViewModel.kt  RgbaGifApp.kt
app/src/main/java/com/rgbagif/camera/: AnalyzerStats.kt  CameraConfig.kt  CameraManager.kt.old  CameraXManager.kt  CaptureConfig.kt  CaptureGeometry.kt  DirectTransformTest.kt  Milestone1Config.kt  PreviewTransformEnforcer.kt  RotationHelper.kt  (+4 more)
app/src/main/java/uniffi/m2down/: m2down.kt
app/src/main/java/uniffi/m3gif/: gifpipe.kt  m3gif.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/mipmap-hdpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
artifacts/: test_summary.md
desk_in/cbor/: frame_000.cbor  frame_001.cbor  frame_002.cbor  frame_003.cbor  frame_004.cbor  frame_005.cbor  frame_006.cbor  frame_007.cbor  frame_008.cbor  frame_009.cbor  frame_010.cbor  frame_011.cbor  frame_012.cbor  frame_013.cbor  frame_014.cbor  frame_015.cbor  frame_016.cbor  frame_017.cbor  frame_018.cbor  frame_019.cbor  frame_020.cbor  frame_021.cbor  frame_022.cbor  frame_023.cbor  frame_024.cbor  frame_025.cbor  frame_026.cbor  frame_027.cbor  frame_028.cbor  frame_029.cbor  frame_030.cbor  frame_031.cbor  frame_032.cbor  frame_033.cbor  frame_034.cbor  frame_035.cbor  frame_036.cbor  frame_037.cbor  frame_038.cbor  frame_039.cbor  (+41 more)
docs/: ARCHITECTURAL_DEEP_DIVE_QA.md  BURN_WEIGHTS_EXPORT.md  M1_CBOR_CAPTURE_SPEC.md  M1_FASTPATH.md  M1_IMPLEMENTATION_STATUS.md  M2_NEURAL_DOWNSCALE_SPEC.md  M3_QUANTIZATION_GIF89A_SPEC.md  PERFORMANCE_GUIDE.md  PHASE_1_COMPLETE.md  TWO_GIF_OUTPUT_STRATEGY.md
m3gif-cli/: Cargo.toml
m3gif-cli/src/: main.rs
macrobenchmark/: build.gradle.kts
macrobenchmark/src/main/: AndroidManifest.xml
patches/: 01_milestone_preview.patch  02_camerax_manager.patch  03_milestone_manager.patch  04_build_gradle.patch  05_capture_button_ux.patch  06_android_test.patch  07_grab_logs_verify.patch  08_test_tags.patch  milestone-fixes.patch
rust-core/: Cargo.toml  Cargo_full.toml  STEP_1_COMPLETE.md  build.rs  build_android.sh  uniffi.toml
rust-core/.cargo/: config.toml
rust-core/crates/common-types/: Cargo.toml
rust-core/crates/common-types/src/: lib.rs
rust-core/crates/ffi/: Cargo.toml
rust-core/crates/ffi/src/: ffi.udl  lib.rs  lib_old.rs
rust-core/crates/m2-quant/: Cargo.toml
rust-core/crates/m2-quant/src/: lib.rs
rust-core/crates/m2-quant/tests/: cube_tests.rs
rust-core/crates/m3-gif/: Cargo.toml
rust-core/crates/m3-gif/src/: lib.rs
rust-core/crates/m3-gif/tests/: golden_gif.rs
rust-core/cube_viewer_bevy/: Cargo.toml
rust-core/cube_viewer_bevy/assets/: example_cube.json  example_cube_correct.json
rust-core/cube_viewer_bevy/src/: loader.rs  main.rs  systems.rs
rust-core/m1fast/: Cargo.toml  build.sh  build_android.sh
rust-core/m1fast/src/: lib.rs
rust-core/m2down/: Cargo.toml  README_M2.md  build.rs  build_android.sh
rust-core/m2down/src/: lib.rs  lib_simple.rs  m2down.udl
rust-core/m2neural/: Cargo.toml
rust-core/m3gif/: Cargo.toml  build.rs  build_android.sh  generate_bindings.sh  uniffi.toml
rust-core/m3gif-core/: Cargo.toml
rust-core/m3gif-core/src/: cbor_v2.rs  downscale.rs  gif_encode.rs  lib.rs  quantize.rs
rust-core/m3gif/.cargo/: config.toml
rust-core/m3gif/src/: lib.rs  m2m3_bridge.rs  m3gif.udl
rust-core/src/: cbor_frame.rs  cbor_frame_v2.rs  downsizer.rs  fast_cbor.rs  fast_cbor_v2.rs  gifpipe.udl  gifpipe_simple.udl  go_network.rs  lib.rs  lib_full.rs  m1_verification.rs  oklab_quantizer.rs  pipeline.rs  quantizer.rs  weights.rs
rust-core/test-bindings/uniffi/m3gif/: gifpipe.kt
rust-core/validate_cube/: Cargo.toml
rust-core/validate_cube/src/: main.rs
scripts/: bootstrap.sh  generate_android_bindings.sh  generate_kotlin_bindings.sh  grab_logs.sh  m1_validate.sh  m2_validate.sh  perfetto_trace.sh  quality_test.sh  run_all_tests.sh  run_device_smoke.sh  test_e2e.sh  verify_rust_pipeline.sh
(+70 files in other folders)
