[package]
name = "gifpipe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "m3gif"

[dependencies]
# UniFFI
uniffi = { version = "0.28", features = ["cli"] }

# Image processing - Now from core
m3gif-core = { path = "./m3gif-core" }

# Serialization (keeping for backward compatibility)
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_bytes = "0.11"
ciborium = "0.2"

# Utilities
anyhow = "1.0"
log = "0.4"
thiserror = "1.0"
android_logger = "0.14"

# Crypto/verification
sha2 = "0.10"
crc32fast = "1.4"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true