[package]
name = "m1fast"
version = "0.1.0"
edition = "2021"

[lib]
name = "m1fast"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
ciborium = "0.2"
log = "0.4"
android_logger = "0.14"

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
