[package]
name = "m2down"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = { version = "0.25", features = ["build", "bindgen"] }
uniffi_bindgen = "0.25"
thiserror = "1.0"
log = "0.4"
android_logger = "0.13"
camino = "1.1"

# For now, use simple implementation without burn to avoid dependency conflicts
# burn = "0.13"
# burn-ndarray = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Add parent workspace access for shared Go network (when ready)
# gifpipe = { path = ".." }

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true