[package]
name = "m2neural"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "uniffi_m2neural"

[dependencies]
# UniFFI for Kotlin bindings
uniffi = { version = "=0.27.1", features = ["build", "bindgen"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Image processing
image = "0.24"

# Logging
log = "0.4"
android_logger = "0.13"

# Neural network inference (simple conv implementation)
ndarray = "0.15"
rayon = "1.7"

[build-dependencies]
uniffi = { version = "=0.27.1", features = ["build"] }
