[package]
name = "m3gif"
version = "0.1.0"
edition = "2021"

[lib]
name = "m3gif"
crate-type = ["cdylib"]

[dependencies]
# GIF encoding with proper LZW compression
gif = "0.13"

# NeuQuant color quantization for high quality
color_quant = "1.1"

# High-quality image resizing with Lanczos3
image = { version = "0.24", default-features = false, features = ["png"] }

# UniFFI for Kotlin bindings
uniffi = { version = "=0.27.1", features = ["build", "bindgen"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
android_logger = "0.13"

[build-dependencies]
uniffi = { version = "=0.27.1", features = ["build"] }

[dev-dependencies]
env_logger = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true